--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
+    <meta name="theme-color" content="#E9ECE6" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payroll System</title>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght,GRAD@0,17..18,400..700,1;1,17..18,400..700,1&display=swap');
+    </style>
   </head>
   <body>
     <!-- 1. Changed id="app" to id="root" to match your main.jsx -->
